--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -71,6 +71,8 @@
 	 <li><a href="solution/SurroundedRegions.html">surrounded Area</a> <a href=http://www.lintcode.com/en/problem/surrounded-regions/>Q</a></li>
 	 	 <li><a href="solution/isolatedislandII.html">island count ii (无向图求连通子图个数）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
 	 <li><a style="color:red" ; href="solution/topologicalSortingTutorial.html">Topological Sorting tutorial(有向图有层次的遍历找环)</a></li>
+   <li><a href="solution/topologicalSorting.html">Topological Sorting</a>  <a href=https://www.lintcode.com/problem/topological-sorting/description>Q</a></li>
+
 	 <li><a href="solution/courseschedule.html">course schedule(Topological sorting</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>
 	 <li><a href="solution/coursescheduleii.html">course schedule II</a> <a href="http://www.lintcode.com/en/problem/course-schedule-ii/">Q</a>  </li>
 	 <li><a href="solution/AlienDictionary.html">Alien dictionary(Topological sorting with duplicate edges)</a> <a href=https://leetcode.com/problems/alien-dictionary/description/>Q</a></li>
@@ -157,7 +159,7 @@
   <li><a href="solution/BinaryTreeMaximumPathSum.html">Binary Tree Maximum PathSum(二分树分治)</a> <a href=https://leetcode.com/problems/binary-tree-maximum-path-sum/description/>Q</a>  </li>
 	<li><a style="color:green" ;  href="solution/isSubTree.html">isSubTree ( 点对树 + 树对数 两个分治模板结合</a> <a href="https://leetcode.com/problems/subtree-of-another-tree/description/">Q</a>  </li>
     <li><a href="solution/SymmetricBinaryTree.html">symmetric binary tree</a> <a href="http://www.lintcode.com/en/problem/symmetric-binary-tree/">Q</a>  </li>
-    <li><a href="solution/binaryTreeSerilization.html">Binary Tree Serilization</a> <a href="http://www.lintcode.com/en/problem/binary-tree-serialization/#">Q</a>  </li>
+    <li><a href="solution/binaryTreeSerilization.html">Binary Tree Serilization</a> <a href=https://leetcode.com/problems/serialize-and-deserialize-binary-tree/description/>Q</a>  </li>
     <li><a href="solution/DeleteaNodeinBST.html">Delete a node in BST</a> <a href=https://leetcode.com/problems/delete-node-in-a-bst/description/>Q</a>  </li>
 </ul>
 
