--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -153,7 +153,8 @@
 <ul>
     <li><a href="lecture/Lecture_3._Binary_Tree__Divide_Conquer.v3.4.pdf">Lecture</li>
 	<li><a href="solution/BinaryTreeDivideAndConquer.html">Divided and Conquer(分治深度理解)</li>
-	<li><a href="solution/BinaryTreePathSum.html">Binary Tree Paths(二分树遍历)</a> <a href=https://leetcode.com/problems/binary-tree-paths/description/>Q</a>  </li>
+	<li><a href="solution/pathSumIII.html">Binary Tree Paths(遍历， 从上往下，由顶至底)</a> <a href=https://leetcode.com/problems/binary-tree-paths/description/>Q</a>  </li>
+  <li><a href="solution/BinaryTreePathSum.html">Binary Tree Path III(遍历, 从上往下，不需要从顶开始，也不需要到底结束)</a> <a href=https://leetcode.com/problems/path-sum-iii/description/>Q</a>  </li>
   <li><a href="solution/BinaryTreeLongestConsecutiveSequence.html">binary Tree Longest Consecutive sequence(分治)</a> <a href="http://www.lintcode.com/en/problem/binary-tree-longest-consecutive-sequence/">Q</a>  </li>
 	<li><a style="color:green" ;  href="solution/subTreeWithMaxiumAverage.html">sub Tree With Maxium average(分治模板)</a> <a href="http://www.lintcode.com/en/problem/subtree-with-maximum-average">Q</a>  </li>
   <li><a href="solution/BinaryTreeMaximumPathSum.html">Binary Tree Maximum PathSum(二分树分治)</a> <a href=https://leetcode.com/problems/binary-tree-maximum-path-sum/description/>Q</a>  </li>
