--- a/html/solution/BinaryTreePathSum.html
+++ b/html/solution/BinaryTreePathSum.html
@@ -20,8 +20,8 @@ public class Solution {
     public List<List<Integer>> binaryTreePathSum(TreeNode root, int target) {
         // Write your code here
         
-        ArrayList<List<Integer>> ret = new ArrayList<>();
-        ArrayList<Integer> result = new ArrayList<>();
+        ArrayList&lt;List&lt;Integer>> ret = new ArrayList<>();
+        ArrayList&lt;Integer> result = new ArrayList<>();
         if ( root == null) return ret;
 
          
