--- a/html/solution/decodeString.html
+++ b/html/solution/decodeString.html
@@ -19,14 +19,14 @@
           Stack&lt;Integer> s1 = new Stack&lt;>();
           Stack&lt;String>  s2 = new Stack&lt;>();
 
-          for( int i=0; i<s.length() ; i++){
+          for( int i=0; i&lt;s.length() ; i++){
 
               char c = s.charAt(i);
 
               if ( Character.isDigit(c)){
 
                   int start = i;
-                  while( i < s.length() && Character.isDigit(s.charAt(i))){
+                  while( i &lt; s.length() && Character.isDigit(s.charAt(i))){
                       i++;
                   }
 
@@ -35,7 +35,7 @@
                   i--;
               }else if ( Character.isLetter(c)){
                   int start = i;
-                  while( i < s.length() && Character.isLetter(s.charAt(i))){
+                  while( i &lt; s.length() && Character.isLetter(s.charAt(i))){
                       i++;
                   }
 
@@ -56,7 +56,7 @@
                   int number = s1.pop();
 
                   StringBuilder sb = new StringBuilder();
-                  for( int j=0; j<number; j++){
+                  for( int j=0; j&lt;number; j++){
                       sb.append(str);
                   }
 
