--- a/html/solution/Anniversary.html
+++ b/html/solution/Anniversary.html
@@ -3,7 +3,7 @@
 
 <body>
 
-<h1 style = "color : red; text-align : center"> Happy 4th Aniversary, Jingyi</h1>
+<h1 style = "color : red; text-align : center"> Happy 4th Anniversary, Jingyi</h1>
 
 
 <h1 style = "color : green; text-align : center">I Love you forever!</h1>
