--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -327,6 +327,7 @@
 	 <li><a href="interview/uber_4_6_2016.txt">Uber Phone 4/2017</a> </li>
 	 <li><a href="interview/uber_4_25_2018_phone.txt">Uber Phone 4/2018</a> </li>
    <li> <a href="interview/facebook_5_16.txt">Facebook( LRU Cache) 5/2018</a> </li>
+   <li>< a href="interview/uber_531_2018Onsite.txt">Uber onsite 5/31/2018</a><li>
 
 	 </ul>
 
