--- a/html/solution/JingyiBirthday30.html
+++ b/html/solution/JingyiBirthday30.html
@@ -9,7 +9,7 @@
 <h1 style = "color : green; text-align : center">Me and Alex Love you forever!</h1>
 
 
-<img src="../../pic/IMG_9930.JPG">
+<img src="../../pic/IMG_9930.jpg">
 <img src="../../pic/IMG_9675.JPG">
 
 
@@ -17,3 +17,4 @@
 
 <br>
 </body>
+ 
