--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -258,7 +258,7 @@
 
 <ul>
 	 <li><a href="solution/longestSubStrwithoutduplicate.html">longest substring without duplicate(最长无重复子串, 双指针异步）</a> <a href=“http://www.lintcode.com/en/problem/longest-substring-without-repeating-characters/#”>Q</a>  </li>
-	 <li><a href="solution/longestsubStringAtmostKdistinctchars.html">longest substring with at most k distinct substring(最长最多k个不同字符子字符串， 双指针异步）</a> <a href="https://leetcode.com/problems/longest-substring-with-at-most-two-distinct-characters/">Q</a>  </li>
+	 <li><a href="solution/longestsubStringAtmostKdistinctchars.html">longest substring with at most k distinct substring(最长连续的k个不同字符子串， 双指针+HashMap）</a> <a href="https://leetcode.com/problems/longest-substring-with-at-most-two-distinct-characters/">Q</a>  </li>
 	 <li><a href="solution/MinimalWindowSubstring.html">Minimal Window Substring(双指针异步)</a> <a href="https://leetcode.com/problems/longest-palindromic-substring/description/">Q</a>  </li>
 
    <li><a href="solution/StringCompression.html">String compression(字符串压缩，读写指针同步）</a> <a href=https://leetcode.com/problems/string-compression/submissions/1>Q</a>  </li>
@@ -325,7 +325,7 @@
 	 <li><a href="interview/Facebook_2_24_2017.txt">Facebook Phone(Serilize&Deserilize binary tree) 02/2017</a> </li>
    <li> <a href="interview/facebook_5_16.txt">Facebook Phone(LRU Cache) 5/2018</a> </li>
    <li> <a href="interview/Facebook_6_1_2018_OnSite.txt">Facebook onSite SF 6/1/2018</a> </li>
-   
+
 	 <li><a href="interview/uber_4_6_2016.txt">Uber Phone 4/2017</a> </li>
 	 <li><a href="interview/uber_4_25_2018_phone.txt">Uber Phone 4/2018</a> </li>
 	<li> <a href="interview/uber_531_2018Onsite.txt">Uber onsite SF 5/31/2018</a></li>
