--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -60,7 +60,8 @@
 	 <li> <a href="solution/graphknowledge.html">图的基本表示法</a></li>
 	 <li><a style="color:red" ; href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(图里能否从一点到另一点，必背模板！)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
 	 <li><a href="solution/EvaluateDivision.html">Evaluate Division(有向图里能否从一点到另一点，返回权重，DFS)</a> <a href="https://leetcode.com/problems/evaluate-division/description/">Q</a>  </li>
-	 <li><a href="solution/RedundentConnection.html">Redundant Connection （有向图找环， DFS）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
+   <li><a href="solution/FindCycleUndirectedGraph.html">Find cycle in undirected graph（无向图找环， BFS）</a> </li>
+   <li><a href="solution/RedundentConnection.html">Redundant Connection （有向图找环， DFS）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
 	 <li><a href="solution/ValidGraphTree.html">Valid Graph Tree(BFS)</a> <a href=https://www.lintcode.com/problem/graph-valid-tree/description>Q</a>  </li>
 	 <li><a style="color:red"  href="solution/UnionFind.html">Union Find 原理和应用 ： 1图求连通子图个数， 2.图找环</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
 	 <li>例子： Redundant connection, island count题目
