--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -50,7 +50,7 @@
 	 <li><a href="solution/palindrom partition.html">Palindrom Partition(Template!)</a> <a href="http://www.lintcode.com/en/problem/palindrome-partitioning/#">Q</a></li>
 	 <li><a href="solution/restoreIPAdress.html">Restore IP Address</a> <a href="http://www.lintcode.com/en/problem/restore-ip-addresses/">Q</a></li>
 	 <li><a href="solution/FindMissingNumber-ii.html">FindMissingNumber-ii</a> <a href="http://www.lintcode.com/en/problem/find-the-missing-number-ii/"> Q</a></li>
-	 <li><a href="solution/wordBreak.html">Word break</a> <a href="http://www.lintcode.com/en/problem/word-break/"> Q</a></li>
+	 <li><a href="solution/wordBreak.html">Word break</a> <a href=https://leetcode.com/problems/word-break/> Q</a></li>
 	 <li><a href="solution/wordBreakII.html">Word break II</a> <a href="http://www.lintcode.com/en/problem/word-break-ii/"> Q</a></li>
 </ul>
 
