--- a/html/solution/BinaryTreeDivideAndConquer.html
+++ b/html/solution/BinaryTreeDivideAndConquer.html
@@ -46,7 +46,7 @@ int helper(TreeNode root){
 <ol>
 <li><a href="BinaryTreeLongestConsecutiveSequence.html">Binary tree longest consecutive sequence</a></li>
 <li><a href="subTreeWithMaxiumAverage.html">sub Tree With Maxium average(</a></li>
-<li><a href="solution/BinaryTreeMaximumPathSum.html">Binary Tree Maximum PathSum(此题目不好理解)</a> <a href=https://leetcode.com/problems/binary-tree-maximum-path-sum/description/>Q</a>  </li>
+<li><a href="BinaryTreeMaximumPathSum.html">Binary Tree Maximum PathSum(经典)</a> <a href=https://leetcode.com/problems/binary-tree-maximum-path-sum/description/>Q</a>  </li>
 
 
 </ol>
