--- a/html/solution/isSubTree.html
+++ b/html/solution/isSubTree.html
@@ -37,6 +37,8 @@ class Solution {
 
 </code></pre>
 
+
+<pre><code>
 是否为子树模版是二分树下找某个点的模版变种
 
 boolean contains(TreeNode root, TreeNode target){
@@ -46,7 +48,7 @@ boolean contains(TreeNode root, TreeNode target){
   return contains(root.left, target) || contains(root.right, target);
 }
 
-
+</code></pre>
 
 
 
