--- a/html/solution/FindCycleUndirectedGraph.html
+++ b/html/solution/FindCycleUndirectedGraph.html
@@ -50,7 +50,7 @@ public class Solution {
 
 
 
-// Find diameter
+// 无向图求最长简单路径， 多点DFS
 
 for( int i=0; i&lt;m.length; i++){
 
@@ -81,8 +81,6 @@ void dfs(String[][] m, ArrayList&lt;String> l, String start){
        }
        return;
     }
-
-
 
     for(String child : childs){
         l.add(child);
