--- a/html/solution/numberOfIslands.html
+++ b/html/solution/numberOfIslands.html
@@ -9,6 +9,7 @@
 
 
 <pre><code>
+DFS
 class Solution {
     public int numIslands(char[][] grid) {
         int count = 0;
@@ -50,73 +51,70 @@ class Solution {
 
 <pre><code>
 
-
-public class Solution {
-
-
-    public int numIslands(boolean[][] grid) {
-        // Write your code here
-        if ( grid == null || grid.length == 0) return 0;
+BFS
+class Solution {
+    public int numIslands(char[][] grid) {
+        if (grid == null || grid.length == 0 || grid[0].length == 0) return 0;
 
         int count = 0;
+        int row = grid.length;
+        int col = grid[0].length;
 
-
-        for( int i=0; i&lt;grid.length; i++){
-            for( int j = 0; j<grid[0].length; j++){
-                if ( grid[i][j]){
-                    bfsFill(grid, i, j);
+        for (int i = 0; i < row; i++) {
+            for (int j = 0; j < col; j++) {
+                if (grid[i][j] == '1') {
                     count++;
+                    bfs(grid, i, j);
                 }
             }
         }
-
         return count;
     }
 
-
-    void bfsFill(boolean[][] grid, int i, int j){
-
+    void bfs(char[][] grid, int x, int y) {
         int row = grid.length;
         int col = grid[0].length;
-        Queue<Integer> q = new LinkedList<>();
 
-        int code = i * col + j;
-
-
+        Queue&lt;Integer> q = new LinkedList&lt;>();
+        int code = getCode(x, y, col);
         q.add(code);
 
+        while (!q.isEmpty()) {
+            int n = q.poll();
+            int i = n / col;
+            int j = n % col;
 
-        while ( !q.isEmpty() ){
+            if ( grid[i][j] == '1') {
+                grid[i][j] = '0';
 
-            code  = q.poll();
-            i = code/col;
-            j = code%col;
-            grid[i][j] = false;
+                if (isValid(i - 1, j, row, col)) {
+                    q.add(getCode(i - 1, j, col));
+                }
 
+                if (isValid(i + 1, j, row, col)) {
+                    q.add(getCode(i + 1, j, col));
+                }
 
-            // up
-            if (  (i-1)>=0  && grid[i-1][j]  ){
-                q.add(   (i-1) * col + j);
-            }
+                if (isValid(i, j - 1, row, col)) {
+                    q.add(getCode(i, j - 1, col));
+                }
 
-            // down
-            if ( (i + 1) < grid.length && grid[i+1][j]  ){
-                q.add(   (i+1) * col + j );
-
-            }
-
-
-            // left
-            if ( (j-1) >= 0 && grid[i][j-1]){
-                q.add(i*col + j-1);
-
-            }
-
-            // right
-            if ( (j + 1) < col && grid[i][j+1] ){
-                q.add( i*col + j+1);
+                if (isValid(i, j + 1, row, col)) {
+                    q.add(getCode(i, j + 1, col));
+                }
             }
         }
+    }
+
+    boolean isValid(int x, int y, int row, int col) {
+        if (x < 0 || x == row || y < 0 || y == col) {
+            return false;
+        }
+        return true;
+    }
+
+    int getCode(int i, int j, int col) {
+        return i * col + j;
     }
 }
 
