--- a/html/solution/numberOfIslands.html
+++ b/html/solution/numberOfIslands.html
@@ -118,7 +118,81 @@ class Solution {
     }
 }
 
+Union Find
+算法： 1. 每一個square是一個獨立的子圖
+      2. 找到1和周圍的1合并
 
+class Solution {
+    public int numIslands(char[][] grid) {
+        if (grid == null || grid.length == 0 || grid[0].length == 0) return 0;
+
+        int row = grid.length;
+        int col = grid[0].length;
+        UF uf = new UF(row*col);
+
+        for (int i = 0; i < row; i++) {
+            for (int j = 0; j < col; j++) {
+                if (grid[i][j] == '1') {
+                    count++;
+                    int code = getCode(i, j, col);
+                    if (isValid(i - 1, j, row, col) && grid[i - 1][j] == '1') {
+                        uf.union(code, getCode(i - 1, j, col));
+                    }
+                    if (isValid(i + 1, j, row, col) && grid[i + 1][j] == '1') {
+                        uf.union(code, getCode(i + 1, j, col));
+                    }
+                    if (isValid(i, j - 1, row, col) && grid[i][j - 1] == '1') {
+                        uf.union(code, getCode(i, j - 1, col));
+                    }
+                    if (isValid(i, j + 1, row, col) && grid[i][j + 1] == '1') {
+                        uf.union(code, getCode(i, j + 1, col));
+                    }
+                }
+            }
+        }
+        return uf.count;
+    }
+
+    boolean isValid(int i, int j, int row, int col) {
+        if (i < 0 || i == row || j < 0 || j == col) {
+            return false;
+        }
+        return true;
+    }
+
+    int getCode(int i, int j, int col) {
+        return i * col + j;
+    }
+
+    class UF {
+        int[] parent;
+        int count;
+
+        UF(int number) {
+            parent = new int[number];
+            for (int i = 0; i < number; i++) {
+                parent[i] = i;
+            }
+        }
+
+        int find(int n) {
+            if (parent[n] == n) {
+                return n;
+            }
+            return find(parent[n]);
+        }
+
+        void union(int n1, int n2) {
+            int pa1 = find(n1);
+            int pa2 = find(n2);
+
+            if (pa1 != pa2) {
+                parent[pa1] = pa2;
+                count--;
+            }
+        }
+    };
+}
 
 </code></pre>
 
