--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -63,8 +63,7 @@
    <li><a href="solution/FindCycleUndirectedGraph.html">Find cycle in undirected graph（无向图找环， BFS 断边。 无向图求最长路径，多点DFS断边）</a> </li>
    <li><a href="solution/RedundentConnection.html">Redundant Connection （有向图找环， DFS）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
 	 <li><a href="solution/ValidGraphTree.html">Valid Graph Tree(BFS)</a> <a href=https://www.lintcode.com/problem/graph-valid-tree/description>Q</a>  </li>
-	 <li><a style="color:red"  href="solution/UnionFind.html">Union Find 原理和应用 ： 1图求连通子图个数， 2.图找环</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
-	 <li>例子： Redundant connection, island count题目
+	 <li><a style="color:red"  href="solution/UnionFind.html">Union Find：无向图分类</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
    <li><a href="solution/MergeEmailAccount.html">Merge email accounts</a> <a href=https://leetcode.com/problems/accounts-merge/solution/>Q</a></li>
 	 <li style="color:red">DFS flood fill 模板专题 用处： 1.求岛的个数， 2求面积， 3求坐标，4求周长， 5给岛染色 ）</li>
 	 <li><a href="solution/numberOfIslands.html">Number of islands(Template!)</a> <a href=https://leetcode.com/problems/number-of-islands/description/>Q</a></li>
