--- a/html/solution/UnionFind.html
+++ b/html/solution/UnionFind.html
@@ -1,29 +1,26 @@
+Union Find( disjoint set, 并查集）<br><br>
+应用：无向图节点分类<br>
+uf.union(A, B), 接口take两个节点
+
+<li><a href="solution/numberOfIslands.html">number of islands</a> <a href="https://leetcode.com/problems/number-of-islands/">Q</a>  </li>
+<li><a href="solution/RedundentConnection.html">Redundant Connection</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
 
 
 
-Union Find algorithm ( disjoint set, 查并集）<br><br>
-應用 ： 節點分類<br>
-
-<li><a href="solution/numberOfIslands.html">number of islands(无向图求连通子图个数）</a> <a href="https://leetcode.com/problems/number-of-islands/">Q</a>  </li>
-<li><a href="solution/RedundentConnection.html">Redundant Connection （有向图找环， DFS）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
-
-
-
-
-算法<br>  Step 1 : 图里的每一个点是一个独立的不可交集<br>
+算法：   Step 1 : 图里的每一个点是一个独立的集<br>
         step 2 : 按照你自己定义的法则进行合并。<br><br>
 
 
 
 数据结构 :  hashmap <br>
 函数     ：
-            constructor 傳入總的節點的個數<br>
-            Find take一个节点，return 这个节点的root<br>
-            union take两个节点, 合并这两个节点的根节点,  每union(A, B)一次，這兩個點就歸為一類<br>
+            constructor<br>
+            find: 返回这个节点的root<br>
+            union: 合并这两个节点的根节点,  每union(A, B)一次，和两个点就归为一类,  时间复杂度近似O(1)
 <pre><code>
 
 
-簡單版本：
+简单版本：
 class UF
 {
     int[] parent = new int[10000];
@@ -52,15 +49,18 @@ class UF
 
 
 
-複雜版本：帶rank
+复杂版本：带rank
 
 class UF{
 
-private HashMap< Node, Node> parent
-private HashMap< Node, Integer> rank
+int[] parent;
+int[] rank;
 
       UF(){
-	       每个节点指向自己，自成一个不可交集
+        for( int i=0; i&lt;10000; i++){
+            parent[i] = i;
+            rank[i] = 0;
+        }
 	  }
 
 
@@ -73,18 +73,16 @@ private HashMap< Node, Integer> rank
 
 	  public void union( int node1, int node 2){
 
-	        int root1 = find(node1);
+	    int root1 = find(node1);
 			int root2 = find(node2);
 
-			if ( root1 == root2 ) return;
-
-			if ( rank.get(root1) > rank.get(root2 ) ){
-			    parent.put(root2, root1);
-			}else if ( rank.get(root1) < rank.get(root2) ){
-			    parent.put(root1, root2)
+			if ( rank[root1] > rank[root2] ) ){
+			    parent[root2] = root1;
+			}else if ( rank[root1] < rank[root2] ){
+			    parent[root1] =root2;
 			}else{
-			    parent.put(root1, root2);
-			    rank.put(root2, rank.get(root2) + 1);
+			    parent[root1]= root2;
+			    rank[root2]++;
 			}
 	  }
 
