--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -61,16 +61,15 @@
 	 <li><a style="color:red" ; href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(图里能否从一点到另一点，必背模板！)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
 	 <li><a href="solution/EvaluateDivision.html">Evaluate Division(有向图里能否从一点到另一点，返回权重，DFS)</a> <a href="https://leetcode.com/problems/evaluate-division/description/">Q</a>  </li>
    <li><a href="solution/FindCycleUndirectedGraph.html">Find cycle in undirected graph（无向图找环， BFS 断边。 无向图求最长路径，多点DFS断边）</a> </li>
-   <li><a href="solution/RedundentConnection.html">Redundant Connection （有向图找环， DFS）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
 	 <li><a href="solution/ValidGraphTree.html">Valid Graph Tree(BFS)</a> <a href=https://www.lintcode.com/problem/graph-valid-tree/description>Q</a>  </li>
 	 <li><a style="color:red"  href="solution/UnionFind.html">Union Find：无向图分类</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
+   <li><a href="solution/RedundentConnection.html">Redundant Connection （无向图找环：Union Find, DFS）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
    <li><a href="solution/MergeEmailAccount.html">Merge email accounts</a> <a href=https://leetcode.com/problems/accounts-merge/solution/>Q</a></li>
 	 <li style="color:red">DFS flood fill 模板专题 用处： 1.求岛的个数， 2求面积， 3求坐标，4求周长， 5给岛染色 ）</li>
 	 <li><a href="solution/numberOfIslands.html">Number of islands(Template!)</a> <a href=https://leetcode.com/problems/number-of-islands/description/>Q</a></li>
 	 <li><a href="solution/maxAreaOfIslands.html">Max area of islands</a> <a href=https://leetcode.com/problems/max-area-of-island/description/>Q</a></li>
 	 <li><a href="solution/floodFill.html">flood fill</a> <a href=https://leetcode.com/problems/flood-fill/description/>Q</a></li>
 	 <li><a href="solution/SurroundedRegions.html">surrounded Area</a> <a href=http://www.lintcode.com/en/problem/surrounded-regions/>Q</a></li>
-	 	 <li><a href="solution/isolatedislandII.html">island count ii (无向图求连通子图个数）</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
 	 <li><a style="color:red" ; href="solution/topologicalSortingTutorial.html">Topological Sorting tutorial(有向图有层次的遍历找环)</a></li>
    <li><a href="solution/topologicalSorting.html">Topological Sorting</a>  <a href=https://www.lintcode.com/problem/topological-sorting/description>Q</a></li>
 
