--- a/html/solution/UnionFind.html
+++ b/html/solution/UnionFind.html
@@ -2,7 +2,8 @@ Union Find( disjoint set, 并查集）<br><br>
 应用：无向图节点分类<br>
 uf.union(A, B), 接口take两个节点
 
-<li><a href="solution/numberOfIslands.html">number of islands</a> <a href="https://leetcode.com/problems/number-of-islands/">Q</a>  </li>
+
+<li><a href="https://leetcode.com/problems/number-of-connected-components-in-an-undirected-graph/">Number of connected components in an undirected graph</a>  </li>
 <li><a href="solution/RedundentConnection.html">Redundant Connection</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
 
 
