--- a/html/solution/UnionFind.html
+++ b/html/solution/UnionFind.html
@@ -1,10 +1,10 @@
 Union Find( disjoint set, 并查集）<br><br>
-应用：无向图节点分类<br>
-uf.union(A, B), 接口take两个节点
+应用：无向图分类找环<br>
+应用特征 图一般表达为 int[][] edges, 因为函数接口take两个顶点。 uf.union(A, B)<br>
 
-
-<li><a href="https://leetcode.com/problems/number-of-connected-components-in-an-undirected-graph/">Number of connected components in an undirected graph</a>  </li>
-<li><a href="solution/RedundentConnection.html">Redundant Connection</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
+<li><a href="solution/ValidGraphTree.html">Valid Graph Tree(无向图分类找环：Union Find, BFS)</a> <a href=https://www.lintcode.com/problem/graph-valid-tree/description>Q</a>  </li>
+<li><a href="https://leetcode.com/problems/number-of-connected-components-in-an-undirected-graph/">Number of connected components in an undirected graph（无向图分类)</a>  </li>
+<li><a href="solution/RedundentConnection.html">Redundant Connection(无向图找环)</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
 
 
 
