--- a/html/solution/graphknowledge.html
+++ b/html/solution/graphknowledge.html
@@ -48,7 +48,7 @@ b. Adjacent list    ( 用顶点来表示图,最常见的一种表达方式）
    
    
    
-c.   用边来表达图, 可以遍历转化成点图
+c.   用边来表达图, 可以遍历转化成点图(Union Find特征，每条边的两个顶点依次Union)
 
 int[][] graph = { {1, 2}, {2, 3}, {2,4}  } 边不会有重复表示 有了{1，2}就不会有{2，1}
 建图的时候，要考虑到一条边有两条路径。 {1,2} => 表示的时候1->{2}, 2->{1}
