--- a/html/solution/RouteBetweenTwoNodesinGraph.html
+++ b/html/solution/RouteBetweenTwoNodesinGraph.html
@@ -57,8 +57,10 @@ public class Solution {
     }
 }
 
-DFS  HashSet模板(一定要熟背）！
-Function signature takes 4 parameters : ( start, end, graph, hashset)
+DFS  模板
+1. 递归在干什么，2递归的结束条件，3递归的分解
+数据结构：使用HashSet去重
+
 
 public class Solution {
 
