--- a/html/solution/RouteBetweenTwoNodesinGraph.html
+++ b/html/solution/RouteBetweenTwoNodesinGraph.html
@@ -154,8 +154,8 @@ void dfs( start, matrix){
 
 	3. 对下一层坐标DFS broadcast
 }
-<li ><a href="numberOfislands">Example: Number Of Islands
-</a></li>
+<a href="numberOfislands.html">Example: Number Of Islands
+</a>
 
 
 
