--- a/html/solution/RouteBetweenTwoNodesinGraph.html
+++ b/html/solution/RouteBetweenTwoNodesinGraph.html
@@ -154,7 +154,7 @@ void dfs( start, matrix){
 
 	3. 对下一层坐标DFS broadcast
 }
-<a href="numberOfislands.html">Example: Number Of Islands
+<a href="numberOfIslands.html">Example: Number Of Islands
 </a>
 
 
