--- a/html/solution/MergeEmailAccount.html
+++ b/html/solution/MergeEmailAccount.html
@@ -8,6 +8,15 @@
 <body>
 
 
+核心思想：把Email转换成ID进行分类
+
+算法： 1. 遍历Accounts,构造一个EmailToID map 和一个EmailToName map
+       2. 同一个name下的email必然是一类的就合并在一起。
+       3. 遍历email把相同的parent ID 的email 合并在一起构造答案
+
+Union Find的思考障碍：
+1. 要把email当成节点合并，而不是name.
+2. 要把email转换成integer后在进行分类。
 
 
 <pre><code>
@@ -83,7 +92,6 @@
 
   }
 
-  最后使用 UF.find(int node) 返回的parent id做分类依据！
 
   时间复杂度  O(Nlg(N)), where N is the total number of email accounts
   if using rank : O(N)
