--- a/html/solution/UnionFind.html
+++ b/html/solution/UnionFind.html
@@ -1,15 +1,17 @@
 Union Find( disjoint set, 并查集）<br><br>
-应用：无向图分类找环<br>
+应用：无向图分类<br>
 应用特征 图一般表达为 int[][] edges, 因为函数接口take两个顶点。 uf.union(A, B)<br>
 
 <li><a href="RedundentConnection.html">Redundant Connection(无向图找环)</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
 <li><a href="ValidGraphTree.html">Valid Graph Tree(无向图找环：Union Find, BFS)</a> <a href=https://www.lintcode.com/problem/graph-valid-tree/description>Q</a>  </li>
 <li><a href="https://leetcode.com/problems/number-of-connected-components-in-an-undirected-graph/">Number of connected components in an undirected graph（无向图分类)</a>  </li>
    <li><a href="MergeEmailAccount.html">Merge email accounts(Union find 应用，比较难想出如何用union find)</a> <a href=https://leetcode.com/problems/accounts-merge/solution/>Q</a></li>
+<br>
+<br>
 
-
-算法：  Step 1 : 判断这题目里的不可交集是什么（点，email account）<br>
-        step 2 : 判断题目里的合并的依据是什么（两点连边，矩阵元素相邻，同一个用户的email)。<br><br>
+ 如何应用Union Find，思考两个问题
+ Step 1 : 判断题目里的不可交集是什么（点，email account）<br>
+ step 2 : 判断题目里的合并的依据是什么（两点连边，矩阵元素相邻，同一个用户的email)。<br><br>
 
 
 
