--- a/html/solution/UnionFind.html
+++ b/html/solution/UnionFind.html
@@ -4,7 +4,7 @@ Union Find( disjoint set, 并查集）<br><br>
 
 <li><a href="RedundentConnection.html">Redundant Connection(无向图找环: Union Find, DFS)</a> <a href="https://leetcode.com/problems/redundant-connection/description/">Q</a>  </li>
 <li><a href="ValidGraphTree.html">Valid Graph Tree(无向图找环：Union Find, BFS)</a> <a href=https://www.lintcode.com/problem/graph-valid-tree/description>Q</a>  </li>
-<li><a href="NumberOfConnectedComponentsInUndirectedGraph.html">Number of connected Components in undirected Graph(无向图找子图个数：Union Find, BFS)</a> <a href="https://leetcode.com/problems/number-of-connected-components-in-an-undirected-graph/">Number of connected components in an undirected graph（无向图分类)</a>  </li>
+<li><a href="NumberOfConnectedComponentsInUndirectedGraph.html">Number of connected Components in undirected Graph(无向图找子图个数：Union Find, BFS)</a> <a href="https://leetcode.com/problems/number-of-connected-components-in-an-undirected-graph/">Q</a>  </li>
 <li><a href="MergeEmailAccount.html">Merge email accounts(Union find 应用，比较难想出如何用union find)</a> <a href=https://leetcode.com/problems/accounts-merge/solution/>Q</a></li>
 <br>
 <br>
