--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -301,9 +301,12 @@
 
 </body>
 
+<div class="codingSectionName">System Design</div>
+<ul>
+  <li><a href="solution/Design_Chat_System.html">Design Chatting System</a></li>
+</ul>
+
 <div class="codingSectionName">Interview</div>
-
-
 <ul>
      	 <li><a href="interview/InterviewSummary.txt">面试心得</a> </li>
      	 <li><a href="interview/CompanyLevelProcess.txt">各大公司面试流程和职位等级</a> </li>
