--- a/html/solution/Design_Chat_System.html
+++ b/html/solution/Design_Chat_System.html
@@ -62,7 +62,10 @@ for( thread ID : all ThreadIDs){
     select * from Message_Table where thraed_ID = ID
 }
 
+Question: How to get thread ID in the server
+Thread ID =   Hash(sort(all participant names))   No conflict
 
+Follow up question: How to handle private property? Mute, unread message
 </code></pre>
 
 
